<resources>

    <string name="app_name">KMPlayer</string>
    <string name="info_main">This activity will be the first activity that user will encounter. This activity gives user choice to select
        different options from the given list. User can navigate to different activity from this activity.
    </string>
    <string name="info_playlist">This activity will display all the playlist that user have created. If user selects a playlist, then he/she
        will be navigated to a new activity that will contain the list of songs stored in that playlist.\n
        For an example I\'ve provided a playlist over here, if you\'ll tap on it you will be navigated to a new activity that contains list of
        songs stored in the list.
    </string>
    <string name="info_playlist_list">
        Here are the list of songs that are present in the playlist- Workout.\n
        If you will select any one of the song then you will be directed to the "Now Playing" activity.
    </string>
    <string name="info_now_playing">
        This activity will display the current playing song information. It will also have the different functionality like seek bar,
        volume up/down button, etc.\n
        From here you can navigate to different activities such as AllSongs, Playlist, etc.\n
        I have also provided an image view beside the song name i.e. \"i\". If you tap on it then a toast will come displaying the song
        information.
    </string>
    <string name="info_all_songs">
        This activity will display the list of the songs present. User can select one of the song from here and he/she will be navigated to the
        "Now Playing" activity and their song will start playing.\n
        As an example I have provided list of four songs, if you will click on any one you will be navigated to \"Now Playing\" activity.\n
        It will also contain a button to navigate to \"Playlist\" activity.
    </string>
    <string name="info_settings">
        In this activity user will able to modify the settings of the app.
    </string>
    <string name="info_payment">
        This activity allows user to make the payment when he/she tries to purchase any song.\n
        I have made this portal using Google Pay i.e. \"Android Pay API\".\n
       The Android Pay API offers a quick and easy path to enable secure, one touch payments in your app using your existing payment infrastructure. Once you complete the integration with your app\'s payment processing flow, Android users will enjoy a rapid, consistent checkout process with Android Pay.
</string>
    <string name="info_help_support">
        Here user can get help or support related to the application. User can also write to us using mail. They can also provide feedback.\n
        User will get different options such as Purchase, Feedback, etc. So that they could opt one and proceed further.
        I have provided two options in this activity. If you will click on it then you will be navigated to mail app. From there user can write
        to us.
    </string>
    <string name="all_song">All Songs</string>
    <string name="playlist">Playlist</string>
    <string name="now_playing">Now Playing</string>
    <string name="settings">Settings</string>
    <string name="purchase_music">Purchase Music</string>
    <string name="help_and_support">Help And Support</string>
    <string name="workout">Workout</string>
    <string name="song1">Song 1</string>
    <string name="song2">Song 2</string>
    <string name="song3">Song 3</string>
    <string name="song4">Song 4</string>
    <string name="playing_nothing">Playing Nothing</string>
    <string name="home">Home</string>
    <string name="purchase">Purchase</string>
    <string name="feedback">Feedback</string>
    <string name="playing">Playing :</string>
    <string name="info">Info</string>
    <string name="song_info">
        Artist : %s \n
        Writer : %s \n
        Composer : %s
    </string>
    <string name="playlistworkout">Playlist Workout</string>

</resources>
