<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="12dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        style="@style/InformationText"
        android:text="@string/info_main" />

    <TextView
        android:id="@+id/all_songs"
        style="@style/Options"
        android:text="@string/all_song" />

    <TextView
        android:id="@+id/playlist"
        style="@style/Options"
        android:text="@string/playlist" />

    <TextView
        android:id="@+id/now_playing"
        style="@style/Options"
        android:text="@string/now_playing" />

    <TextView
        android:id="@+id/purchase_music"
        style="@style/Options"
        android:text="@string/purchase_music" />


    <TextView
        android:id="@+id/help_and_support"
        style="@style/Options"
        android:text="@string/help_and_support" />

</LinearLayout>