<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NowPlaying">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="12dp"
        android:text="@string/now_playing"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView"
        style="@style/InformationText"
        android:layout_marginTop="16dp"
        android:text="@string/info_now_playing" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playing"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/song_name_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/playing_nothing"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/info"

            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:contentDescription="@string/info"
            app:srcCompat="@drawable/info" />

    </LinearLayout>

    <LinearLayout style="@style/buttons_layout">

        <Button
            android:id="@+id/allSong"
            style="@style/buttons"
            android:layout_width="wrap_content"
            android:text="@string/all_song" />

        <Button
            android:id="@+id/purchaseMusic"
            style="@style/buttons"
            android:layout_width="wrap_content"
            android:text="@string/purchase_music" />

        <Button
            android:id="@+id/playList"
            style="@style/buttons"
            android:layout_width="wrap_content"
            android:text="@string/playlist" />

        <Button
            android:id="@+id/home"
            style="@style/buttons"
            android:layout_width="wrap_content"
            android:text="@string/home" />
    </LinearLayout>
</RelativeLayout>