<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Playlist">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="12dp"
        android:text="@string/playlist"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        style="@style/InformationText"
        android:layout_marginTop="16dp"
        android:text="@string/info_playlist" />

    <TextView
        android:id="@+id/workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/workout"
        android:textSize="20sp" />

    <LinearLayout style="@style/buttons_layout">

        <Button
            android:id="@+id/allSong"
            style="@style/buttons"
            android:layout_width="wrap_content"
            android:text="@string/all_song" />

        <Button
            android:id="@+id/nowPlaying"
            style="@style/buttons"
            android:layout_width="wrap_content"
            android:text="@string/now_playing" />

        <Button
            android:id="@+id/home"
            style="@style/buttons"
            android:layout_width="wrap_content"
            android:text="@string/home" />
    </LinearLayout>

</RelativeLayout>