<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpAndSupport">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/help_and_support"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>


    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/textView7"
        style="@style/InformationText"
        android:text="@string/info_help_support" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/purchase"
            style="@style/Options"
            android:text="@string/purchase" />

        <TextView
            android:id="@+id/feedback"
            style="@style/Options"
            android:layout_marginTop="20dp"
            android:text="@string/feedback" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/buttons_layout">

        <Button
            android:id="@+id/home"
            style="@style/buttons"
            android:text="@string/home" />
    </LinearLayout>
</RelativeLayout>